--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-hot-boilerplate",
+  "name": "seek-ads-checkout",
   "version": "1.0.0",
-  "description": "Boilerplate for ReactJS project with hot code reloading",
+  "description": "Seek coding exercise",
   "scripts": {
     "start": "node server.js",
     "lint": "eslint src"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gaearon/react-hot-boilerplate.git"
+    "url": "https://github.com/rcalabro/seek-ads-checkout.git"
   },
   "keywords": [
     "react",
@@ -21,12 +21,12 @@
     "edit",
     "webpack"
   ],
-  "author": "Dan Abramov <dan.abramov@me.com> (http://github.com/gaearon)",
+  "author": "Renato Calabro <calabro@live.com> (http://github.com/rcalabro)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gaearon/react-hot-boilerplate/issues"
+    "url": "https://github.com/rcalabro/seek-ads-checkout/issues"
   },
-  "homepage": "https://github.com/gaearon/react-hot-boilerplate",
+  "homepage": "https://github.com/rcalabro/seek-ads-checkout",
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
@@ -44,6 +44,17 @@
   },
   "dependencies": {
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-bootstrap": "^0.30.6",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
+    "react-router-bootstrap": "^0.23.1",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.12.1",
+    "serve-favicon": "^2.3.0"
+  },
+  "engines": {
+    "node": "7.x.x"
   }
 }
