--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Seek coding exercise",
   "scripts": {
     "start": "node server.js",
+    "test": "jest",
     "lint": "eslint src"
   },
   "repository": {
@@ -28,31 +29,40 @@
   },
   "homepage": "https://github.com/rcalabro/seek-ads-checkout",
   "devDependencies": {
-    "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.1",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
-    "express": "^4.13.4",
-    "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "babel-core": "*",
+    "babel-eslint": "*",
+    "babel-jest": "*",
+    "babel-loader": "*",
+    "babel-preset-es2015": "*5",
+    "babel-preset-react": "*",
+    "babel-preset-stage-0": "*",
+    "eslint": "*",
+    "eslint-plugin-react": "*",
+    "express": "*",
+    "jest-cli": "*",
+    "react-hot-loader": "*",
+    "react-test-renderer": "*",
+    "webpack": "*",
+    "webpack-dev-middleware": "",
+    "webpack-hot-middleware": "^"
   },
   "dependencies": {
-    "react": "^0.14.6",
-    "react-bootstrap": "^0.30.6",
-    "react-dom": "^0.14.6",
-    "react-redux": "^4.4.5",
-    "react-router": "^3.0.0",
-    "react-router-bootstrap": "^0.23.1",
-    "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0",
-    "redux-saga": "^0.12.1",
-    "serve-favicon": "^2.3.0"
+    "babel-eslint": "^7.1.0",
+    "eslint": "^3.9.1",
+    "eslint-plugin-react": "^6.6.0",
+    "react": "^15.3.2",
+    "react-bootstrap": "*",
+    "react-dom": "^15.3.2",
+    "react-redux": "*",
+    "react-router": "*",
+    "react-router-bootstrap": "*",
+    "react-router-redux": "*",
+    "redux": "*",
+    "redux-saga": "*",
+    "serve-favicon": "*"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "engines": {
     "node": "7.x.x"
