**feat**(styles): add webpack sass loader

--- a/package.json
+++ b/package.json
@@ -36,20 +36,26 @@
     "babel-preset-es2015": "*5",
     "babel-preset-react": "*",
     "babel-preset-stage-0": "*",
+    "css-loader": "^0.25.0",
     "eslint": "*",
     "eslint-plugin-react": "*",
     "express": "*",
     "jest-cli": "*",
+    "node-sass": "^3.11.3",
     "react-hot-loader": "*",
     "react-test-renderer": "*",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "*",
     "webpack-dev-middleware": "",
     "webpack-hot-middleware": "^"
   },
   "dependencies": {
     "babel-eslint": "^7.1.0",
+    "body-parser": "^1.15.2",
     "eslint": "^3.9.1",
     "eslint-plugin-react": "^6.6.0",
+    "express-session": "^1.14.2",
     "react": "^15.3.2",
     "react-bootstrap": "*",
     "react-dom": "^15.3.2",
