--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-eslint": "*",
     "babel-jest": "*",
     "babel-loader": "*",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "*5",
     "babel-preset-react": "*",
     "babel-preset-stage-0": "*",
@@ -39,7 +40,7 @@
     "express": "*",
     "jest-cli": "*",
     "node-sass": "^3.11.3",
-    "react-hot-loader": "*",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-test-renderer": "*",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
@@ -61,6 +62,8 @@
     "react-router-bootstrap": "*",
     "react-router-redux": "*",
     "redux": "*",
+    "redux-form": "^6.2.0",
+    "redux-form-submit-saga": "^1.1.0",
     "redux-saga": "*",
     "serve-favicon": "*"
   },
