--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Seek coding exercise",
   "scripts": {
-    "start": "node server.js",
+    "start": "concurrently --kill-others \"npm run start-api\" \"npm run start-server\"",
+    "start-api": "node api.js",
+    "start-server": "node server.js",
     "test": "jest",
     "lint": "eslint src"
   },
@@ -34,6 +36,7 @@
     "babel-preset-es2015": "*5",
     "babel-preset-react": "*",
     "babel-preset-stage-0": "*",
+    "babel-register": "^6.18.0",
     "css-loader": "^0.25.0",
     "eslint": "*",
     "eslint-plugin-react": "*",
@@ -51,6 +54,7 @@
   "dependencies": {
     "babel-eslint": "^7.1.0",
     "body-parser": "^1.15.2",
+    "concurrently": "^3.1.0",
     "eslint": "^3.9.1",
     "eslint-plugin-react": "^6.6.0",
     "express-session": "^1.14.2",
