--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "concurrently": "^3.1.0",
     "eslint": "^3.9.1",
     "eslint-plugin-react": "^6.6.0",
+    "express-http-proxy": "^0.10.1",
     "express-session": "^1.14.2",
     "react": "^15.3.2",
     "react-bootstrap": "*",
@@ -68,8 +69,11 @@
     "redux": "*",
     "redux-form": "^6.2.0",
     "redux-form-submit-saga": "^1.1.0",
+    "redux-localstorage": "^0.4.1",
     "redux-saga": "*",
-    "serve-favicon": "*"
+    "serve-favicon": "*",
+    "url": "^0.11.0",
+    "whatwg-fetch": "^1.0.0"
   },
   "jest": {
     "testEnvironment": "node"
