--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "babel-eslint": "*",
     "babel-jest": "*",
     "babel-loader": "*",
+    "babel-preset-es2015": "^6.0.15",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "*5",
     "babel-preset-react": "*",
     "babel-preset-stage-0": "*",
     "babel-register": "^6.18.0",
@@ -46,8 +46,8 @@
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "webpack": "*",
-    "webpack-dev-middleware": "",
-    "webpack-hot-middleware": "^"
+    "webpack-dev-middleware": "*",
+    "webpack-hot-middleware": "*"
   },
   "dependencies": {
     "babel-eslint": "^7.1.0",
